[gd_scene load_steps=5 format=3 uid="uid://cvx8in7r4d7ml"]

[ext_resource type="Script" path="res://Scripts/System/scrHUD.gd" id="1_mo0wy"]
[ext_resource type="FontFile" uid="uid://4m283seugry" path="res://Graphics/Fonts/NFPixels-Regular.otf" id="2_1aw6v"]
[ext_resource type="Texture2D" uid="uid://cs7d7k2kmj13y" path="res://Graphics/Sprites/Collectables/sprSecretItem.png" id="3_2my7r"]
[ext_resource type="Texture2D" uid="uid://dd3vx3fvdxdrh" path="res://Graphics/Sprites/Player/sprPlayerIdle.png" id="3_ncdqv"]

[node name="objHUD" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_mo0wy")

[node name="Display" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="Display"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 108.0
grow_horizontal = 0
pivot_offset = Vector2(184, 0)
theme_override_constants/margin_top = 0

[node name="Panel" type="Panel" parent="Display/MarginContainer"]
custom_minimum_size = Vector2(112, 96)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.73

[node name="VBoxContainer" type="VBoxContainer" parent="Display/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 2

[node name="textDebug1" type="Label" parent="Display/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_1aw6v")
theme_override_font_sizes/font_size = 20
text = "Player X"
horizontal_alignment = 2

[node name="textDebug2" type="Label" parent="Display/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1aw6v")
theme_override_font_sizes/font_size = 20
text = "Player Y"
horizontal_alignment = 2

[node name="textDebug3" type="Label" parent="Display/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1aw6v")
theme_override_font_sizes/font_size = 20
text = "FPS"
horizontal_alignment = 2

[node name="textDebug4" type="Label" parent="Display/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1aw6v")
theme_override_font_sizes/font_size = 20
text = "Room Name"
horizontal_alignment = 2

[node name="textDebug5" type="Label" parent="Display/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1aw6v")
theme_override_font_sizes/font_size = 20
text = "[\\]: Show More"
horizontal_alignment = 2

[node name="textDebug6" type="Label" parent="Display/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1aw6v")
theme_override_font_sizes/font_size = 20
text = "[1] Godmode"
horizontal_alignment = 2

[node name="textDebug7" type="Label" parent="Display/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1aw6v")
theme_override_font_sizes/font_size = 20
text = "[2] Inf Jump"
horizontal_alignment = 2

[node name="textDebug8" type="Label" parent="Display/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1aw6v")
theme_override_font_sizes/font_size = 20
text = "[3] Hitbox"
horizontal_alignment = 2

[node name="textDebug9" type="Label" parent="Display/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1aw6v")
theme_override_font_sizes/font_size = 20
text = "[4] Save"
horizontal_alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="Display"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -72.0
offset_right = 200.0
offset_bottom = -8.0
grow_vertical = 0
pivot_offset = Vector2(0, 64)

[node name="Panel" type="Panel" parent="Display/MarginContainer2"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="Display/MarginContainer2/Panel"]
position = Vector2(24, 32)
texture = ExtResource("3_2my7r")

[node name="Label" type="Label" parent="Display/MarginContainer2/Panel"]
layout_mode = 0
offset_left = 48.0
offset_right = 192.0
offset_bottom = 64.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_1aw6v")
theme_override_font_sizes/font_size = 20
text = "Item info"
vertical_alignment = 1
autowrap_mode = 2
clip_text = true

[node name="Timer" type="Timer" parent="Display/MarginContainer2"]
process_callback = 0
wait_time = 5.0
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.392157)
z_index = 100
texture = ExtResource("3_ncdqv")
hframes = 4

[connection signal="timeout" from="Display/MarginContainer2/Timer" to="." method="_on_timer_timeout"]
